# pktlab

./: .gitignore  LICENSE  Makefile  README.md  pktlab_c_python_ai_implementation_pack.md  pyproject.toml
ctl/: pyproject.toml
ctl/pktlabctl/: __init__.py  cli.py  client.py  main.py  output.py
ctl/pktlabctl/commands/: datapath.py  stats.py  status.py  topology.py
ctl/tests/integration/: test_datapath_command.py  test_stats_command.py  test_status_command.py  test_topology_command.py
ctrld/: pyproject.toml
ctrld/pktlab_ctrld/: __init__.py  app.py  error.py  main.py  types.py
ctrld/pktlab_ctrld/api/: __init__.py  app.py  models.py  routes_datapath.py  routes_health.py  routes_topology.py
ctrld/pktlab_ctrld/capture/: __init__.py
ctrld/pktlab_ctrld/config/: __init__.py  rules.py  topology.py  validation.py
ctrld/pktlab_ctrld/dpdk_client/: __init__.py  client.py  models.py  protocol.py
ctrld/pktlab_ctrld/logging/: __init__.py
ctrld/pktlab_ctrld/metrics/: __init__.py
ctrld/pktlab_ctrld/process/: __init__.py  supervisor.py
ctrld/pktlab_ctrld/scenario/: __init__.py
ctrld/pktlab_ctrld/state/: __init__.py  desired.py  observed.py  reconcile.py
ctrld/pktlab_ctrld/topology/: __init__.py  links.py  manager.py  namespaces.py  routes.py  taps.py
ctrld/pktlab_ctrld/util/: __init__.py  netns.py  subprocess.py  time.py
ctrld/tests/: __init__.py
ctrld/tests/integration/: __init__.py  test_controller_health_api.py  test_controller_runtime_forwarding_privileged.py  test_dpdk_client_stub.py  test_topology_api.py  test_topology_manager.py  (+1 more)
ctrld/tests/unit/: __init__.py  (+6 more)
dpdkd/: meson.build
dpdkd/src/: actions.c  actions.h  daemon.c  daemon.h  datapath.c  datapath.h  eal.c  eal.h  health.c  health.h  ipc_server.c  ipc_server.h  json_proto.c  json_proto.h  log.c  log.h  main.c  parser.c  parser.h  ports.c  ports.h  stats.c  stats.h
(+52 files in other folders)
