[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pktlab-ctrld"
version = "0.1.0"
description = "pktlab controller"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "prometheus-client>=0.20,<1",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "uvicorn>=0.30,<1",
]

[project.scripts]
pktlab-ctrld = "pktlab_ctrld.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pktlab_ctrld*"]
